<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NaraSource</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Masuk</string>
    <string name="hint_register">Belum punya akun?</string>
    <string name="hint_login">Sudah punya akun?</string>
    <string name="register">Daftar</string>
    <string name="email_hint">Masukkan email anda</string>
    <string name="password_hint">Masukkan kata sandi</string>
    <string name="terms_hint">Saya telah membaca dan menyetujui <u><font color="#3186F5">Persyaratan &amp; Kebijakan</font></u> dari pihak NaraSource.</string>
    <string name="switch_login"><u><font color="#3186F5">Login</font></u></string>
    <string name="switch_register"><u><font color="#3186F5">Daftar</font></u></string>
    <string name="username">Username</string>
    <string name="username_hint">Masukkan username anda</string>
    <string name="name">Nama</string>
    <string name="name_hint">Masukkan nama anda</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Masukkan ulang password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_failed">Autentikasi Gagal</string>
    <string name="register_success">Register Berhasil</string>
    <string name="register_failed">Register Gagal</string>

    <string name="skip">Lewati</string>
    <string name="next">Lanjut</string>
    <string name="get_started">Mulai</string>
    <string name="lorem">Lorem Ipsum</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</string>

    <!-- Strings for On Boarding Screen -->
    <!--Titles-->
    <string name="slide_title_1">Ubah Kesulitan Menjadi Kemudahan</string>
    <string name="slide_title_2">Pilih Kriteria</string>
    <string name="slide_title_3">Lakukan Wawancara</string>
    <!--Descriptions-->
    <string name="slide_desc_1">Mencari Narasumber lebih mudah dengan menggunakan NaraSource.</string>
    <string name="slide_desc_2">Tentukan Narasumber sesuai kebutuhanmu.</string>
    <string name="slide_desc_3">Atur jadwal untuk melakukan wawancara.</string>


    <string name="title_home">Beranda</string>
    <string name="title_activity">Aktifitas</string>
    <string name="title_find">Cari</string>
    <string name="cd_find_btn">Mulai cari narasumber</string>
    <string name="profile">Profil</string>
    <string name="forgot_password"><u><font color="#3186F5">Lupa sandi?</font></u></string>
    <string name="back">Kembali</string>
    <string name="forgot_password_description">Mohon masukan email yang terdaftar pada aplikasi NaraSource.</string>
    <string name="forgot_password_title">Lupa kata sandi?</string>
    <string name="reset_password">Reset Sandi</string>
    <string name="succsess">Sukses</string>
    <string name="reset_password_success">Permintaan reset sandi telah dikirim. Silakan cek email anda.</string>
    <string name="settings">Settings</string>
    <string name="total_interview">Total wawancara: %d</string>
    <string name="logout">Keluar</string>
    <string name="terms_and_conditions"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="about_us">Tentang Kami</string>
    <string name="guides">Petunjuk</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="change_password">Ganti Sandi</string>
    <string name="old_password">Sandi Lama</string>
    <string name="old_password_hint">Masukkan sandi lama</string>
    <string name="new_password">Sandi Baru</string>
    <string name="new_password_hint">Masukkan sandi baru</string>
    <string name="confirm_new_password">Konfirmasi Sandi Baru</string>
    <string name="confirm_new_password_hint">Masukkan ulang sandi baru</string>
    <string name="edit_profile">Atur Profil</string>

    <string name="search_hint">Silakan ketik disini</string>
    <string name="search">Cari</string>

    <string name="written_by">Ditambahkan oleh <![CDATA[<font color="#3186F5">%1$s</font>]]></string>


    <string name="title_narasumber">Narasumber</string>
    <string name="title_meeting">Meeting</string>
    <string-array name="activities" tools:ignore="ExtraTranslation">
        <item>Semua</item>
        <item>Berlangsung</item>
        <item>Sukses</item>
        <item>Gagal</item>
    </string-array>
</resources>