<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backColor">

        <TextView
            android:id="@+id/tv_name"
            style="@style/Theme.NaraQ.Header_6"
            android:layout_marginStart="45dp"
            android:layout_marginTop="35dp"
            android:text="@string/name"
            android:textColor="?attr/textColorPrimary2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            app:boxBackgroundColor="?attr/backColor"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:startIconDrawable="@drawable/ic_user_outlined"
            app:startIconTint="?attr/textColorPrimary2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                style="@style/Theme.NaraQ.Body_5"
                android:layout_width="match_parent"
                android:hint="@string/name_hint"
                android:inputType="textPersonName|textCapWords"
                android:paddingTop="8dp"
                android:textColor="?attr/textColorPrimary"
                android:textColorHint="?attr/textColorSecondary2" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_username"
            style="@style/Theme.NaraQ.Header_6"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textColor="?attr/textColorPrimary2"
            app:layout_constraintStart_toStartOf="@+id/input_layout_name"
            app:layout_constraintTop_toBottomOf="@id/input_layout_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="?attr/backColor"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_name"
            app:layout_constraintStart_toStartOf="@+id/input_layout_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            app:startIconDrawable="@drawable/ic_user_outlined"
            app:startIconTint="?attr/textColorPrimary2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username"
                style="@style/Theme.NaraQ.Body_5"
                android:layout_width="match_parent"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:paddingTop="8dp"
                android:textColor="?attr/textColorPrimary"
                android:textColorHint="?attr/textColorSecondary2" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_email"
            style="@style/Theme.NaraQ.Header_6"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="?attr/textColorPrimary2"
            app:layout_constraintStart_toStartOf="@+id/input_layout_username"
            app:layout_constraintTop_toBottomOf="@id/input_layout_username" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="?attr/backColor"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_username"
            app:layout_constraintStart_toStartOf="@+id/input_layout_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="?attr/textColorPrimary2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                style="@style/Theme.NaraQ.Body_5"
                android:layout_width="match_parent"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingTop="8dp"
                android:textColor="?attr/textColorPrimary"
                android:textColorHint="?attr/textColorSecondary2" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            style="@style/Theme.NaraQ.Header_6"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="?attr/textColorPrimary2"
            app:layout_constraintStart_toStartOf="@+id/input_layout_email"
            app:layout_constraintTop_toBottomOf="@id/input_layout_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="?attr/backColor"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_email"
            app:layout_constraintStart_toStartOf="@+id/input_layout_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="?attr/textColorPrimary2"
            app:endIconTint="@color/selector_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                style="@style/Theme.NaraQ.Body_5"
                android:layout_width="match_parent"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingTop="14dp"
                android:textColor="?attr/textColorPrimary"
                android:textColorHint="?attr/textColorSecondary2" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_confirm_password"
            style="@style/Theme.NaraQ.Header_6"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_password"
            android:textColor="?attr/textColorPrimary2"
            app:layout_constraintStart_toStartOf="@+id/input_layout_password"
            app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="?attr/backColor"
            app:endIconTint="@color/selector_color"
            app:endIconTintMode="src_atop"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_password"
            app:layout_constraintStart_toStartOf="@+id/input_layout_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirm_password"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="?attr/textColorPrimary2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_confirm_password"
                style="@style/Theme.NaraQ.Body_5"
                android:layout_width="match_parent"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingTop="14dp"
                android:textColor="?attr/textColorPrimary"
                android:textColorHint="?attr/textColorSecondary2" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_terms"
            style="@style/Theme.NaraQ.Checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:checked="true"
            android:fontFamily="@font/poppins"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/terms_hint"
            android:textSize="12sp"
            android:layout_gravity="start"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_confirm_password"
            app:layout_constraintStart_toStartOf="@+id/input_layout_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_confirm_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button"
            android:text="@string/register"
            android:textColor="?attr/colorOnPrimary"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_confirm_password"
            app:layout_constraintStart_toStartOf="@+id/input_layout_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_terms" />

        <TextView
            android:id="@+id/tv_hint_login"
            style="@style/Theme.NaraQ.Body_6"
            android:layout_marginTop="20dp"
            android:text="@string/hint_login"
            android:textColor="?attr/textColorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <TextView
            android:id="@+id/tv_login_switch"
            style="@style/Theme.NaraQ.Body_6"
            android:layout_marginBottom="20dp"
            android:text="@string/switch_login"
            android:textColor="?attr/textColorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_login"
            app:layout_constraintVertical_bias="0.0" />

        <include
            android:id="@+id/inc_progress"
            layout="@layout/progress_overlay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>