<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    tools:context=".auth.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="179dp"
        android:layout_height="179dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top_bg"
        app:layout_constraintBottom_toBottomOf="@+id/login_content"
        app:layout_constraintEnd_toEndOf="@+id/login_content"
        app:layout_constraintStart_toStartOf="@+id/login_content"
        app:layout_constraintTop_toTopOf="@+id/login_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/tv_email"
            style="@style/Theme.NaraQ.Header_5"
            android:layout_marginStart="45dp"
            android:layout_marginTop="42dp"
            android:text="@string/email"
            android:textColor="?attr/textColorPrimary2"
            app:layout_constraintStart_toStartOf="@+id/login_content"
            app:layout_constraintTop_toTopOf="@+id/login_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            app:boxBackgroundColor="?attr/backColor"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/login_content"
            app:layout_constraintStart_toStartOf="@+id/login_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="?attr/textColorPrimary2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_email"
                style="@style/Theme.NaraQ.Body_5"
                android:layout_width="match_parent"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingTop="8dp"
                android:textColor="?attr/textColorPrimary"
                android:textColorHint="?attr/textColorSecondary2" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            style="@style/Theme.NaraQ.Header_5"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textColor="?attr/textColorPrimary2"
            app:layout_constraintStart_toStartOf="@+id/login_content"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            app:boxBackgroundColor="?attr/backColor"
            app:endIconTint="@color/selector_color"
            app:endIconTintMode="src_atop"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/login_content"
            app:layout_constraintStart_toStartOf="@+id/login_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="?attr/textColorPrimary2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_password"
                style="@style/Theme.NaraQ.Body_5"
                android:layout_width="match_parent"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingTop="14dp"
                android:textColor="?attr/textColorPrimary"
                android:textColorHint="?attr/textColorSecondary2" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_button"
            android:text="@string/login"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_password"
            app:layout_constraintStart_toStartOf="@+id/input_layout_password"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_password" />

        <TextView
            android:id="@+id/tv_hint_register"
            style="@style/Theme.NaraQ.Body_6"
            android:layout_marginTop="24dp"
            android:text="@string/hint_register"
            android:textColor="?attr/textColorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login" />

        <TextView
            android:id="@+id/tv_register_switch"
            style="@style/Theme.NaraQ.Body_6"
            android:layout_marginBottom="32dp"
            android:text="@string/register"
            android:textColor="?attr/textColorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/tv_hint_register"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>