<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.profile.ChangePasswordFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:theme="@style/SecondaryActionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/backColor"
        app:title=""
        app:menu="@menu/edit_menu">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingMultiplier="0"
            android:paddingTop="6dp"
            android:text="@string/change_password"
            android:textColor="?attr/textColorPrimary2" />
    </androidx.appcompat.widget.Toolbar>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backColor"
        android:layout_marginTop="?attr/actionBarSize">
        <TextView
            android:id="@+id/tv_old_password"
            style="@style/Theme.NaraSource.Header_6"
            android:layout_marginStart="45dp"
            android:layout_marginTop="35dp"
            android:text="@string/old_password"
            android:textColor="?attr/textColorPrimary2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_old_password"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            app:boxBackgroundColor="?attr/backColor"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_old_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_old_password"
                style="@style/Theme.NaraSource.Body_5"
                android:layout_width="match_parent"
                android:hint="@string/old_password_hint"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="?attr/textColorPrimary"
                android:textColorHint="?attr/textColorSecondary2"
                app:iconTint="?attr/textColorSecondary2" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_new_password"
            style="@style/Theme.NaraSource.Header_6"
            android:layout_marginTop="20dp"
            android:text="@string/new_password"
            android:textColor="?attr/textColorPrimary2"
            app:layout_constraintStart_toStartOf="@+id/input_layout_old_password"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_old_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_new_password"
            style="?attr/textInputFilledStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="?attr/backColor"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/input_layout_old_password"
            app:layout_constraintStart_toStartOf="@id/input_layout_old_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_new_password"
                style="@style/Theme.NaraSource.Body_5"
                android:layout_width="match_parent"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="?attr/textColorPrimary"
                android:textColorHint="?attr/textColorSecondary2" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_confirm_new_password"
            style="@style/Theme.NaraSource.Header_6"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_new_password"
            android:textColor="?attr/textColorPrimary2"
            app:layout_constraintStart_toStartOf="@+id/input_layout_old_password"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_new_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_confirm_new_password"
            style="?attr/textInputFilledStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="?attr/backColor"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="@id/input_layout_old_password"
            app:layout_constraintStart_toStartOf="@id/input_layout_old_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_confirm_new_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_confirm_new_password"
                style="@style/Theme.NaraSource.Body_5"
                android:layout_width="match_parent"
                android:hint="@string/confirm_new_password_hint"
                android:inputType="textPassword"
                android:paddingTop="8dp"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="?attr/textColorPrimary"
                android:textColorHint="?attr/textColorSecondary2" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>