<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.co.mka.narasource.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail_article_activity"
            app:destination="@id/navigation_detail_article_activity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_activity"
        android:name="id.co.mka.narasource.presentation.activity.ActivityFragment"
        android:label="@string/title_activity"
        tools:layout="@layout/fragment_activity" />
    <dialog
        android:id="@+id/navigation_main_menu_dialog"
        android:name="id.co.mka.narasource.presentation.home.MainMenuFragment"
        android:label="Main menu"
        tools:layout="@layout/fragment_main_menu" >
        <action
            android:id="@+id/action_navigation_main_menu_dialog_to_navigation_profile_activity"
            app:destination="@+id/navigation_profile_activity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_main_menu_dialog_to_navigation_notification_activity"
            app:destination="@id/navigation_notification_activity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"/>
    </dialog>
    <activity
        android:id="@+id/navigation_profile_activity"
        android:name="id.co.mka.narasource.presentation.profile.ProfileActivity"
        android:label="@string/profile"
        tools:layout="@layout/activity_profile" />
    <fragment
        android:id="@+id/navigation_search_article"
        android:name="id.co.mka.narasource.presentation.searchArticle.SearchArticleFragment"
        android:label="Pencarian"
        tools:layout="@layout/fragment_search_article">
        <action
            android:id="@+id/action_navigation_search_article_to_navigation_detail_article_activity"
            app:destination="@id/navigation_detail_article_activity" />
    </fragment>

    <activity
        android:id="@+id/navigation_notification_activity"
        android:name="id.co.mka.narasource.presentation.notification.NotificationActivity"
        android:label="Notifikasi"
        tools:layout="@layout/activity_notification" />

    <activity
        android:id="@+id/navigation_detail_article_activity"
        android:name="id.co.mka.narasource.presentation.article.DetailArticleActivity"
        android:label="Artikel"
        tools:layout="@layout/activity_detail_article">
        <deepLink
            android:id="@+id/deepLink2"
            app:uri="https://www.narasource.com/article/{id_article}" />
        <argument
            android:name="id_article"
            app:argType="string"
            app:nullable="true" />
    </activity>
</navigation>